using java.util.Base64 instead of javax.xml.bind.DatatypeConverter
...to allow us to run on jdk9+
Signed-off-by: Andre Dietisheim <adietish@redhat.com>